--- a/posts-html/installing-email-with-postfix-and-dovecot.html
+++ b/posts-html/installing-email-with-postfix-and-dovecot.html
@@ -338,9 +338,7 @@ non_smtpd_milters = inet:localhost:12345
 
 <!-- comments -->
 <ol class="commentlist">
-<li class="post pingback">
-<p>Pingback: <a class="url" href="https://blog.za3k.com/mail-filtering-with-dovecot/" rel="ugc">Mail filtering with Dovecot - Optimal Prime</a></p>
-</li><!-- #comment-## -->
+<!-- #comment-## -->
 <li class="comment even thread-even depth-1" id="li-comment-2842">
 <div id="comment-2842">
 <div class="comment-author vcard">
