Clean up permalinks out of comments

--- a/comments/controlling-a-computercraft-turtle-remotely.html
+++ b/comments/controlling-a-computercraft-turtle-remotely.html
@@ -5,8 +5,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/b7fcc830b8a111f098fb64bdd96eedf2?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/b7fcc830b8a111f098fb64bdd96eedf2?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn"><a class="url" href="https://comparegamehosting.com/game/minecraft/" rel="ugc external nofollow">Alex Booth</a></cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/controlling-a-computercraft-turtle-remotely/#comment-3128">
-			April 25, 2018 at 9:27 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">April 25, 2018 at 9:27 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Opening up ComputerCraft to the world using the http commands was an amazing idea from the developers!</p>
 </div>
