--- a/comments/introducing-the-zorchpad-display-demo.html
+++ b/comments/introducing-the-zorchpad-display-demo.html
@@ -5,8 +5,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/a1e9d69b1d8b0a1fd3a90f03a40de162?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/a1e9d69b1d8b0a1fd3a90f03a40de162?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">JenniferRM</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/introducing-the-zorchpad-display-demo/#comment-11338">
-			April 20, 2024 at 9:52 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">April 20, 2024 at 9:52 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Very cool idea. I was imagining form factors, and was thinking briefly about somehow having a sort of laptop arrangement where an e-ink screen is visible through glass when it is closed and in some kind of “protective storage mode”, and then visible directly from “the proper side of the e-ink screen” after it opens up. This is probably impossible using default hardware options, but searching around to confirm this lead to some interesting links and unusual design demos.</p>
 <p>Here’s ~12 year old thread from someone who wants a computer to use in an off grid cabin.<br/>
@@ -22,8 +21,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">admin</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/introducing-the-zorchpad-display-demo/#comment-11339">
-			April 20, 2024 at 10:24 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">April 20, 2024 at 10:24 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Try using numbers, instead of words! It works better for comparing power usage.</p>
 <p>The “low-power computer” someone wants from 12 years ago should be 3W. The Zorchpad is designed to run at 0.001W.</p>
