--- a/comments/making-a-hardware-random-number-generator.html
+++ b/comments/making-a-hardware-random-number-generator.html
@@ -5,8 +5,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/477bf018c52601e86d3a8aa07c6f9392?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/477bf018c52601e86d3a8aa07c6f9392?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">jiacheng hao</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/making-a-hardware-random-number-generator/#comment-11135">
-			March 3, 2024 at 9:04 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">March 3, 2024 at 9:04 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Hello, I think you are truely right about the TRNG. I am a researcher who specializes in designing TRNG. And now I have a TRNG chip with PCB support USB2.0. And the speed can be up to 30Mbps. It can pass NIST 800-22 and 800-90B. Are you interested in that? Looking forward to your reply!!</p>
 </div>
@@ -16,8 +15,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">admin</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/making-a-hardware-random-number-generator/#comment-11136">
-			March 3, 2024 at 11:36 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">March 3, 2024 at 11:36 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Interested in what way?</p>
 <p>Is your TRNG open-source?</p>
