--- a/comments/printing-on-the-brother-hl-2270dw-printer-using-a-raspberry-pi.html
+++ b/comments/printing-on-the-brother-hl-2270dw-printer-using-a-raspberry-pi.html
@@ -5,8 +5,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/bc00b207944738af582a91c5352ef163?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/bc00b207944738af582a91c5352ef163?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">Joel</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/printing-on-the-brother-hl-2270dw-printer-using-a-raspberry-pi/#comment-4165">
-			August 2, 2020 at 12:52 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">August 2, 2020 at 12:52 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>There appears to be a typo in step 5A. The page currently reads “lpinfo -m” but I believe should be “lpinfo -v”. Per the man page, the m flag lists drivers and the v flag lists devices. </p>
 <p>The USB device can be found in the -v output for step 5A but the driver can be found in the -m output for step 5B.</p>
@@ -17,8 +16,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/b99febd9d3367d3306947a8e159c6445?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/b99febd9d3367d3306947a8e159c6445?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">Scott</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/printing-on-the-brother-hl-2270dw-printer-using-a-raspberry-pi/#comment-4213">
-			October 19, 2020 at 5:10 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">October 19, 2020 at 5:10 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Thank you so very much for this. Worked like a charm.</p>
 <p>Any tips on how to print over the network?</p>
@@ -29,8 +27,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/dffffda5bcb146c22d8be3ef6b4f6554?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/dffffda5bcb146c22d8be3ef6b4f6554?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">rathesun01</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/printing-on-the-brother-hl-2270dw-printer-using-a-raspberry-pi/#comment-4277">
-			December 8, 2020 at 6:44 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">December 8, 2020 at 6:44 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Awesome post. Joel is supposedly correct. It should have been “lpinfo -v” in the step 5A.</p>
 </div>
@@ -40,8 +37,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">admin</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/printing-on-the-brother-hl-2270dw-printer-using-a-raspberry-pi/#comment-4279">
-			December 12, 2020 at 1:31 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">December 12, 2020 at 1:31 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Corrected ‘lpinfo -v’, thanks.<br>
 No clue how to print over the network, sorry. That’s actually why I set up a raspberry pi to connect to the printer instead–it’s my wifi interface.</br></p>
@@ -52,8 +48,7 @@ No clue how to print over the network, sorry. That’s actually why I set up a r
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/b851d521102349bbfd71e7d7df8bef44?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/b851d521102349bbfd71e7d7df8bef44?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">steve</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/printing-on-the-brother-hl-2270dw-printer-using-a-raspberry-pi/#comment-4319">
-			December 30, 2020 at 9:05 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">December 30, 2020 at 9:05 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>I have the Brother HL-2270DW, and I had to install from source to get it to work. I’m not using USB, but port forwarding across via NAT to another internal network. </p>
 <p>I just used the cups admin pages to complete setting things up. Before using this package, I picked some other closely related printer. It was printing the page, sucking it back in, then finally printing. Not terrible, but I was annoyed. Now it’s perfect!</p>
@@ -66,8 +61,7 @@ No clue how to print over the network, sorry. That’s actually why I set up a r
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/1edcef9b0ab9150a7e2d22cd18371609?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/1edcef9b0ab9150a7e2d22cd18371609?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">Jaye Horn</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/printing-on-the-brother-hl-2270dw-printer-using-a-raspberry-pi/#comment-4380">
-			February 18, 2021 at 3:19 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">February 18, 2021 at 3:19 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>How did you install from source? and how did you do the port forwarding across via NAT to another internal network? I’m new to this so any help would be very much appreciated.</p>
 <p>Thank you.</p>
@@ -80,8 +74,7 @@ No clue how to print over the network, sorry. That’s actually why I set up a r
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/173de507afbda1d5933757bb66e863eb?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/173de507afbda1d5933757bb66e863eb?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">Job</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/printing-on-the-brother-hl-2270dw-printer-using-a-raspberry-pi/#comment-4341">
-			January 20, 2021 at 8:09 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">January 20, 2021 at 8:09 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Would this work for brother hl-l2395dw scanner?</p>
 </div>
@@ -91,8 +84,7 @@ No clue how to print over the network, sorry. That’s actually why I set up a r
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/285bae3dce12d6c20103a5ff2a4bcddb?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/285bae3dce12d6c20103a5ff2a4bcddb?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">Adam Trask</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/printing-on-the-brother-hl-2270dw-printer-using-a-raspberry-pi/#comment-5178">
-			October 22, 2021 at 5:00 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">October 22, 2021 at 5:00 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Thanks so much for posting this.  This helped get my HL-L2300D working properly.</p>
 </div>
@@ -102,8 +94,7 @@ No clue how to print over the network, sorry. That’s actually why I set up a r
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/76652e498c8089550fa09056625d5899?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/76652e498c8089550fa09056625d5899?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">Danial Foster</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/printing-on-the-brother-hl-2270dw-printer-using-a-raspberry-pi/#comment-5438">
-			December 24, 2021 at 1:39 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">December 24, 2021 at 1:39 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>&gt;&gt;&gt; (author’s shameful note: if you’re not looking, I find it<br>
 &gt;&gt;&gt;surprisingly easy to plug USB B into the ethernet jack)</br></p>
@@ -118,8 +109,7 @@ No clue how to print over the network, sorry. That’s actually why I set up a r
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/fe520de38df86000b2d31661c96cd28a?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/fe520de38df86000b2d31661c96cd28a?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">J Bot</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/printing-on-the-brother-hl-2270dw-printer-using-a-raspberry-pi/#comment-9429">
-			January 3, 2023 at 4:03 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">January 3, 2023 at 4:03 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Any steps to do this with a wifi connected HL-2270DW? Thanks!</p>
 </div>
