--- a/comments/running-a-forge-server-on-headless-linux.html
+++ b/comments/running-a-forge-server-on-headless-linux.html
@@ -5,8 +5,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/eca9fbfd1236b50f30aec8f7b95ef721?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/eca9fbfd1236b50f30aec8f7b95ef721?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn"><a class="url" href="https://2dminecraft.wordpress.com/" rel="ugc external nofollow">Susan Tatun</a></cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/running-a-forge-server-on-headless-linux/#comment-511">
-			July 10, 2015 at 11:31 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">July 10, 2015 at 11:31 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>An honest sharing about downloaing and installing Minecraft 1.6.4.  I followed what you mentioned and did it sucessfully. Right now, I’m playing with my little son and guiding him what the terrific things are. Anyway, thanks a lot!</p>
 </div>
@@ -16,8 +15,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/f386723170dfc6b4122c5fe2d95ffbbc?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/f386723170dfc6b4122c5fe2d95ffbbc?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">Lynx</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/running-a-forge-server-on-headless-linux/#comment-1349">
-			August 18, 2015 at 1:44 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">August 18, 2015 at 1:44 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>4am installs of servers is hard, and trying to follow the Forge wiki which is inaccurate at best is hard.<br/>
 You got me from dead brick to running box in ten minutes. Thank you.</p>
@@ -28,8 +26,7 @@ You got me from dead brick to running box in ten minutes. Thank you.</p>
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/746c2f840c27e88b6bfc135f14f4ce37?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/746c2f840c27e88b6bfc135f14f4ce37?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">crumpuppet</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/running-a-forge-server-on-headless-linux/#comment-1689">
-			September 7, 2015 at 1:32 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">September 7, 2015 at 1:32 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Thanks so much! I’ve been looking for these steps for a while, and finally found something that works. Would have been first prize if it could be used along with a GUI frontend like mcmyadmin, but oh well 🙂</p>
 </div>
@@ -39,8 +36,7 @@ You got me from dead brick to running box in ten minutes. Thank you.</p>
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/48ef5c93bf1c483b50dd6b7977b9cbca?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/48ef5c93bf1c483b50dd6b7977b9cbca?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">Dave</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/running-a-forge-server-on-headless-linux/#comment-2468">
-			November 9, 2015 at 11:14 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">November 9, 2015 at 11:14 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Same here.  Searched all over found yours and running in moments.  My kids have been hooked on mods and wanted a server.  I have VMware and can spin up a linux box up in moments.  This was so easy. Thanks.</p>
 </div>
@@ -50,8 +46,7 @@ You got me from dead brick to running box in ten minutes. Thank you.</p>
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/8cc161f40686089efa4eb9dbc381797a?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/8cc161f40686089efa4eb9dbc381797a?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn"><a class="url" href="https://minecraftapkmod.info/download/" rel="ugc external nofollow">Minecraft Lover</a></cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/running-a-forge-server-on-headless-linux/#comment-3252">
-			February 6, 2019 at 6:40 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">February 6, 2019 at 6:40 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Very useful information, Thank you</p>
 </div>
@@ -61,8 +56,7 @@ You got me from dead brick to running box in ten minutes. Thank you.</p>
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/4589e18b3dc7de6c60e1b99052acfe1d?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/4589e18b3dc7de6c60e1b99052acfe1d?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">Leon</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/running-a-forge-server-on-headless-linux/#comment-3788">
-			September 9, 2019 at 9:12 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">September 9, 2019 at 9:12 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Does anyone here have problems with installing the mods. Im donwloading them in the mods directory with the cmd “wget” and nothing works.Am i using the wrong command or what?</p>
 </div>
@@ -72,8 +66,7 @@ You got me from dead brick to running box in ten minutes. Thank you.</p>
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/b50d1a265153eee6da6b41d6adc0eb06?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/b50d1a265153eee6da6b41d6adc0eb06?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn"><a class="url" href="https://apkstreet.com/roblox-mod-apk-unlimited-robux/" rel="ugc external nofollow">Rajan Chopra</a></cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/running-a-forge-server-on-headless-linux/#comment-3991">
-			March 7, 2020 at 3:45 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">March 7, 2020 at 3:45 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Thanks for sharing Minecraft. Can you also share Roblox Apk?</p>
 </div>
@@ -83,8 +76,7 @@ You got me from dead brick to running box in ten minutes. Thank you.</p>
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/52ce2f57adc4ccfc3e6274ffa86bf9f5?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/52ce2f57adc4ccfc3e6274ffa86bf9f5?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">Neckbeard Hater</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/running-a-forge-server-on-headless-linux/#comment-4324">
-			January 4, 2021 at 10:22 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">January 4, 2021 at 10:22 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>“one of the devs seems actively hostile around providing help to …”</p>
 <p>this is so typical of the linux community. really.  And I am a developer with 20 years experience, I hate the Linux community.</p>
@@ -95,8 +87,7 @@ You got me from dead brick to running box in ten minutes. Thank you.</p>
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/cca172695c7bd7d417748775c1ad3c36?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/cca172695c7bd7d417748775c1ad3c36?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">nat</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/running-a-forge-server-on-headless-linux/#comment-9669">
-			February 14, 2023 at 9:17 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">February 14, 2023 at 9:17 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>lol this tutorial still works 9 years later thanks tho this helped so much!!</p>
 </div>
