--- a/comments/steak-tartare-3.html
+++ b/comments/steak-tartare-3.html
@@ -5,8 +5,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/aa5d8a139b96dc7b082a50ca2446deff?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/aa5d8a139b96dc7b082a50ca2446deff?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn"><a class="url" href="http://sometimesicook.net" rel="ugc external nofollow">Tricia</a></cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/steak-tartare-3/#comment-255">
-			May 21, 2015 at 8:14 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">May 21, 2015 at 8:14 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>So tasty! Enjoyed our month of obsessing over the recipe ^u^</p>
 </div>
