--- a/comments/streaming-linux-twitch-using-ffmpeg-and-alsa.html
+++ b/comments/streaming-linux-twitch-using-ffmpeg-and-alsa.html
@@ -5,8 +5,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/47e66dd3a830fdd2a6191a4100425b43?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/47e66dd3a830fdd2a6191a4100425b43?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">Mario Enriquez</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/streaming-linux-twitch-using-ffmpeg-and-alsa/#comment-4344">
-			January 22, 2021 at 7:31 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">January 22, 2021 at 7:31 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Thanks for your post.</p>
 </div>
