--- a/comments/terminal-goal-rationality-techniques.html
+++ b/comments/terminal-goal-rationality-techniques.html
@@ -5,8 +5,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/111a7d8b594d7707bc1f5e3085c069ef?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/111a7d8b594d7707bc1f5e3085c069ef?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">JSevilla</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/terminal-goal-rationality-techniques/#comment-631">
-			July 18, 2015 at 9:42 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">July 18, 2015 at 9:42 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Cool stuff. I liked exactboxing and DTOT.<br/>
 Murphy jitsu has potential.<br/>
