--- a/comments/diy-keyboards-and-how-keyboards-work.html
+++ b/comments/diy-keyboards-and-how-keyboards-work.html
@@ -5,8 +5,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/f9bddb456724b83c643af6f44ae32042?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/f9bddb456724b83c643af6f44ae32042?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">nortti</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/diy-keyboards-and-how-keyboards-work/#comment-10102">
-			June 9, 2023 at 2:43 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">June 9, 2023 at 2:43 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>“And better keyboards can detect multiple keys being pressed at once (N-key rollover), which I think they do by having a completely separate wire to each key.”</p>
 <p>You can keep a matrix arrangement and have N-key rollover by putting a diode in series with every switch</p>
