--- a/comments/installing-email-with-postfix-and-dovecot.html
+++ b/comments/installing-email-with-postfix-and-dovecot.html
@@ -6,8 +6,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/3a4733166894a30fe613838ecaaa1e95?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/3a4733166894a30fe613838ecaaa1e95?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">eduardz</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/installing-email-with-postfix-and-dovecot/#comment-2842">
-			November 23, 2016 at 12:18 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">November 23, 2016 at 12:18 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Hello,</p>
 <p>Can you implement quota support from postgressql?</p>
@@ -18,8 +17,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">admin</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/installing-email-with-postfix-and-dovecot/#comment-2873">
-			April 5, 2017 at 7:05 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">April 5, 2017 at 7:05 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Not sure if this is “will you do” or “is it possible”. I will not do anything to set up quota–I have one user (me) so it doesn’t make sense. I encourage you to link if you do.</p>
 </div>
@@ -31,8 +29,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/04f9049f74277e447eee4569ac61563c?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/04f9049f74277e447eee4569ac61563c?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">Tudor</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/installing-email-with-postfix-and-dovecot/#comment-2852">
-			February 23, 2017 at 2:45 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">February 23, 2017 at 2:45 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>In the “useradd -d -M -d /var/mail/vmail –shell=/usr/bin/nologin -u 5000 -g vmail vmail“ I think the first “-d“ shouldn’t be there</p>
 <p>Thanks for the post</p>
@@ -43,8 +40,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">admin</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/installing-email-with-postfix-and-dovecot/#comment-2874">
-			April 5, 2017 at 7:06 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">April 5, 2017 at 7:06 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Thanks for the corrections, glad you found it useful.</p>
 </div>
@@ -56,8 +52,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/04f9049f74277e447eee4569ac61563c?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/04f9049f74277e447eee4569ac61563c?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">Tudor</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/installing-email-with-postfix-and-dovecot/#comment-2853">
-			February 23, 2017 at 2:54 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">February 23, 2017 at 2:54 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Also, for Postgresql the correct commands to create users are:<br/>
 CREATE USER postfix PASSWORD ‘XXX’;<br/>
@@ -69,8 +64,7 @@ CREATE USER dovecot PASSWORD ‘XXX’;</p>
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/04f9049f74277e447eee4569ac61563c?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/04f9049f74277e447eee4569ac61563c?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">Tudor</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/installing-email-with-postfix-and-dovecot/#comment-2854">
-			February 23, 2017 at 3:22 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">February 23, 2017 at 3:22 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Also, there shouldn’t be any comma after the VALUES (<br/>
     ‘za3k’,<br/>
@@ -83,8 +77,7 @@ CREATE USER dovecot PASSWORD ‘XXX’;</p>
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/9fe7e715cb7615380e65ebecc7c703b6?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/9fe7e715cb7615380e65ebecc7c703b6?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">S</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/installing-email-with-postfix-and-dovecot/#comment-3135">
-			May 12, 2018 at 9:36 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">May 12, 2018 at 9:36 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>A little sloppy – you should have simply shown the entire contents of each file one by one, with descriptions in comments or whatever, instead of breaking them up into snippets – and there are a few errors and omissions (I can’t recall which ones now)<br/>
 However, using this guide and some googling, I was able to get a mailserver working – which is more than I can say for any other guide; so, thanks.</p>
@@ -95,8 +88,7 @@ However, using this guide and some googling, I was able to get a mailserver work
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/0f57bc0e6352458280cb89f50df560eb?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/0f57bc0e6352458280cb89f50df560eb?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">Korilius</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/installing-email-with-postfix-and-dovecot/#comment-4730">
-			July 17, 2021 at 3:56 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">July 17, 2021 at 3:56 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>A guide that could have been great but tripped at the finish line.  A lot of errors in SQL and elsewhere along with step reorganization.</p>
 </div>
@@ -106,8 +98,7 @@ However, using this guide and some googling, I was able to get a mailserver work
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" loading="lazy" src="https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">admin</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/installing-email-with-postfix-and-dovecot/#comment-4731">
-			July 17, 2021 at 4:52 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">July 17, 2021 at 4:52 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>If you have any specific errors you can mention, I’d be happy to fix stuff.</p>
 <p>But yeah, that’s the problem with writing a guide after you do something instead of during/before.</p>
