--- a/comments/making-my-finances-public.html
+++ b/comments/making-my-finances-public.html
@@ -5,8 +5,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/35cf1c8d20becce42e768c4bade3a1dc?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/35cf1c8d20becce42e768c4bade3a1dc?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">anon</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/making-my-finances-public/#comment-3253">
-			February 7, 2019 at 6:19 am</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">February 7, 2019 at 6:19 am </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>is offline</p>
 </div>
@@ -16,8 +15,7 @@
 <div class="comment-author vcard">
 <img alt="" class="avatar avatar-40 photo" decoding="async" height="40" src="https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=40&amp;d=mm&amp;r=g" srcset="https://secure.gravatar.com/avatar/09485be3ee1e86da6e39412f5c1b2a48?s=80&amp;d=mm&amp;r=g 2x" width="40"/><cite class="fn">admin</cite> <span class="says">says:</span>
 </div><!-- .comment-author .vcard -->
-<div class="comment-meta commentmetadata"><a href="https://blog.za3k.com/making-my-finances-public/#comment-3882">
-			December 17, 2019 at 7:41 pm</a> </div><!-- .comment-meta .commentmetadata -->
+<div class="comment-meta commentmetadata">December 17, 2019 at 7:41 pm </div><!-- .comment-meta .commentmetadata -->
 <div class="comment-body">
 <p>Yeah, my export broke a while back. This should be fixed indefinitely, but covers 2011-2016 only now.</p>
 </div>
